tests/compile-fail/empty_struct.rs
#[macro_use] extern crate bevy_fn_plugin;

#[bevy_plugin]
struct EmptyStruct;

fn main() {}
