tests/compile-fail/empty_struct.stderr
error: expected `fn`
 --> tests/compile-fail/empty_struct.rs:4:1
  |
4 | struct EmptyStruct;
  | ^^^^^^
